# Project_Fich_Bank

./: .env.template  README.md  main.py  pyproject.toml  user_settings.json
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_decorators_py.html  z_145eef247bfb46b6_external_api_py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_utils_py.html  z_145eef247bfb46b6_widget_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_test_decorators_py.html  z_a44f0ac069e85531_test_generators_test_py.html  z_a44f0ac069e85531_test_masks_test_py.html  z_a44f0ac069e85531_test_processing_test_py.html  z_a44f0ac069e85531_test_widget_test_py.html
src/: __init__.py  decorators.py  external_api.py  file_reader.py  generators.py  logger_config.py  main.py  masks.py  processing.py  reports.py  search.py  services.py  utils.py  views.py  widget.py
tests/: test_decorators.py  test_external_api.py  test_file_reader.py  test_generators_test.py  test_logging.py  test_masks_test.py  test_processing_test.py  test_reports.py  test_search.py  test_services.py  test_utils.py  test_views.py  test_widget_test.py
