[tool.poetry]
name = "project-fich-bank"
version = "0.1.0"
description = ""
authors = ["Vic.M"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
poetry-core = "^2.1.3"
requests = "2.32.4"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
mypy = "^1.17.1"
black = "^25.1.0"
isort = "^6.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^7.0.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.4.2"

[tool.black]
line-length = 119
extend-exclude = '''
/(
    | .git
    | __pycache__
    | .venv
    | venv
)/
'''

[tool.isort]
profile = "black"
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = "venv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
